[tool.poetry]
name = "torch-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "torch_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
pandas = "^2.2.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
